Чек стайл + доработка API по комментариям + первый тесты постмана